--- a/custom_documents/views/inherit_project_workspace_view.xml
+++ b/custom_documents/views/inherit_project_workspace_view.xml
@@ -6,7 +6,9 @@
         	<field name="model">documents.folder</field>
         	<field name="type">form</field> <field name="arch" type="xml">
         	<form string="inherit workspace">
-                <field name="project_name"/>
+                <group>
+                <field name="project_name">
+                 </group>
                 <footer>
                    <button type="object" name="inherit_workspace" class="oe_highlight" string="Créer" />
                     <button special="cancel" string="Annuler" class="btn-default"/>
