--- a/custom_documents/views/inherit_project_workspace_view.xml
+++ b/custom_documents/views/inherit_project_workspace_view.xml
@@ -7,7 +7,7 @@
         	<field name="type">form</field> <field name="arch" type="xml">
         	<form string="inherit workspace">
                 <group>
-                <field name="project_name">
+                <field name="project_name"/>
                  </group>
                 <footer>
                    <button type="object" name="inherit_workspace" class="oe_highlight" string="Créer" />
